# fabram

./: .gitignore  .gitmodules  README.md  gen_svgs.py  pyproject.toml  run_dido.py
cells/primitives/: nand2.yaml  nand3.yaml  nand4.yaml  not.yaml
cells/sram/: bit_cell.yaml  dido.yaml  dmy_cell.yaml  ms_reg.yaml  row_driver.yaml  self_timed_ctrl.yaml  sense_amp.yaml  write_driver.yaml
fabram/: __init__.py  __main__.py  cell_ports.py  char_main.py  geometry.py  waveforms.py
fabram/characterize/: __init__.py  compiler.py  liberty.py  optimizer.py  render.py  testbench.py  timing.py
fabram/characterize/cells/: __init__.py  bit_cell.py  dido.py  row_driver.py  sense_amp.py  write_driver.py
fabram/generators/: arrays.py  decode.py  top.py
tests/yosys/: check.ys  top.v
