[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fabram"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["spice_gen", "liberty_gen"]

[project.scripts]
fabram      = "fabram.__main__:main"
fabram-char = "fabram.char_main:main"

[tool.hatch.build.targets.wheel]
packages = ["fabram"]
